Add support for the QRESYNC, CONDSTORE, and WITHIN IMAP extensions.